--- a/SJTours/resources/SearchItems.plist
+++ b/SJTours/resources/SearchItems.plist
@@ -96,7 +96,7 @@
 		<key>pushIdentifier</key>
 		<string>public</string>
 		<key>name</key>
-		<string>站点</string>
+		<string>车站</string>
 		<key>imageName</key>
 		<string>icon_class_gongjiao</string>
 		<key>type</key>
