--- a/SJTours/resources/MenuItems.plist
+++ b/SJTours/resources/MenuItems.plist
@@ -26,7 +26,7 @@
 	</dict>
 	<dict>
 		<key>pushIdentifier</key>
-		<string>gotoViewSpots</string>
+		<string>gotoJiudian</string>
 		<key>name</key>
 		<string>酒店</string>
 		<key>imageName</key>
@@ -38,7 +38,7 @@
 	</dict>
 	<dict>
 		<key>pushIdentifier</key>
-		<string>gotoViewSpots</string>
+		<string>gotoCanyin</string>
 		<key>name</key>
 		<string>餐饮</string>
 		<key>imageName</key>
